Table alignment issue fixed

--- a/src/assets/css/BOM.css
+++ b/src/assets/css/BOM.css
@@ -157,3 +157,7 @@ margin-left: 7px;
     color: #ffffff !important;
     border-radius: 15px;
 }
+.p-datatable-thead{
+  background-color: #e8eef2 !important;
+  text-align: left !important;
+}
